[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket="0.26.2"

serde={version="1.0.126",features=["derive"]}
serde_json="1.0"


futures={version="0.3",default-features=false}
tokio = {version="1.14.0",features=["full"]}

